--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-  <!-- Fondo animado -->
   <div class="background"></div>
 
   <!-- Menú superior -->
@@ -19,8 +18,6 @@
       <a href="#contexto">Contexto</a>
       <a href="#impacto">Impacto ético</a>
       <a href="#cts">Análisis CTS</a>
-      <a href="#faq">FAQ</a>
-      <a href="#casos">Casos Reales</a>
       <a href="#test">Test</a>
       <a href="#refs">Bibliografía</a>
     </nav>
@@ -32,137 +29,151 @@
     <p>Explorá cómo la ciencia y la tecnología transforman nuestra privacidad en la era digital.</p>
   </header>
 
-  <main>
-    <section id="intro">
-      <h2>1. Introducción</h2>
-      <p>
-        En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, tecnología y sociedad. 
-        El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los dispositivos inteligentes han generado nuevas formas de vigilancia,
-        muchas veces invisibles, que ponen en tensión los límites entre seguridad, libertad y control.
-      </p>
-    </section>
+  <main class="content-layout">
+    <!-- Contenido principal -->
+    <div class="main-column">
+      <section id="intro">
+        <h2>1. Introducción</h2>
+        <p>
+          En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, tecnología y sociedad. 
+          El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los dispositivos inteligentes han generado nuevas formas de vigilancia,
+          muchas veces invisibles, que ponen en tensión los límites entre seguridad, libertad y control.
+        </p>
+      </section>
 
-    <section id="contexto">
-      <h2>2. Contexto Científico y Tecnológico</h2>
-      <p>
-        La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
-        Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
-        Organismos estatales y corporaciones privadas utilizan esta información para fines de seguridad, marketing o control social.
-      </p>
-    </section>
+      <section id="contexto">
+        <h2>2. Contexto Científico y Tecnológico</h2>
+        <p>
+          La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
+          Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
+          Organismos estatales y corporaciones privadas utilizan esta información para fines de seguridad, marketing o control social.
+        </p>
+      </section>
 
-    <section id="impacto">
-      <h2>3. Impacto Social y Ético</h2>
-      <p>
-        La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. 
-        Se genera una sensación de observación permanente que afecta la libertad de expresión y la intimidad individual. 
-        Desde el punto de vista ético, se discuten los límites de la recolección de datos y la responsabilidad de quienes los manipulan.
-      </p>
-    </section>
+      <section id="impacto">
+        <h2>3. Impacto Social y Ético</h2>
+        <p>
+          La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. 
+          Se genera una sensación de observación permanente que afecta la libertad de expresión y la intimidad individual. 
+          Desde el punto de vista ético, se discuten los límites de la recolección de datos y la responsabilidad de quienes los manipulan.
+        </p>
+      </section>
 
-    <section id="cts">
-      <h2>4. Análisis desde la Perspectiva CTS</h2>
-      <p>
-        Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
-        sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. 
-        La tecnología, lejos de ser neutral, refleja las estructuras de poder que la crean y la utilizan.
-      </p>
-    </section>
+      <section id="cts">
+        <h2>4. Análisis desde la Perspectiva CTS</h2>
+        <p>
+          Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
+          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. 
+          La tecnología, lejos de ser neutral, refleja las estructuras de poder que la crean y la utilizan.
+        </p>
+      </section>
+    </div>
 
-    <!-- FAQ -->
-    <section id="faq">
-      <h2>5. Preguntas Frecuentes</h2>
-      <div class="faq-container">
-        <div class="faq-item">
-          <button class="faq-question">¿Qué es la vigilancia masiva?</button>
-          <div class="faq-answer">
-            <p>Es la recolección sistemática de información personal a gran escala, realizada por gobiernos o empresas mediante tecnologías digitales, con fines de control, seguridad o marketing.</p>
+    <!-- Columna lateral (FAQ + Casos Reales) -->
+    <aside class="side-column">
+      <section id="faq">
+        <h2>Preguntas Frecuentes</h2>
+        <div class="faq-container">
+          <div class="faq-item">
+            <button class="faq-question">¿Qué es la vigilancia masiva?</button>
+            <div class="faq-answer">
+              <p>Es la recolección sistemática de información personal a gran escala, realizada por gobiernos o empresas mediante tecnologías digitales.</p>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-question">¿Por qué se considera un problema ético?</button>
+            <div class="faq-answer">
+              <p>Porque afecta la libertad individual, la autonomía y la posibilidad de expresarse sin temor al control o la exposición pública.</p>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-question">¿Qué papel cumple la inteligencia artificial?</button>
+            <div class="faq-answer">
+              <p>Permite analizar datos y predecir comportamientos, facilitando la vigilancia automatizada y el control social.</p>
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <button class="faq-question">¿Cómo puedo proteger mis datos?</button>
+            <div class="faq-answer">
+              <p>Usá contraseñas seguras, configurá la privacidad de tus redes, evitá compartir información sensible y usá autenticación de dos pasos.</p>
+            </div>
           </div>
         </div>
+      </section>
 
-        <div class="faq-item">
-          <button class="faq-question">¿Cómo afecta la privacidad personal?</button>
-          <div class="faq-answer">
-            <p>Reduce la capacidad de decidir qué compartimos y genera comportamientos condicionados por la observación constante, afectando la libertad y la autonomía.</p>
-          </div>
+      <section id="casos">
+        <h2>Casos Reales de Vigilancia Masiva</h2>
+        <div class="casos-container">
+          <article class="caso">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Edward_Snowden-2.jpg"
+                 onerror="this.src='https://cdn.pixabay.com/photo/2021/05/19/18/46/cyber-security-6268578_1280.png';" 
+                 alt="Edward Snowden" />
+            <div>
+              <h3>Edward Snowden (2013)</h3>
+              <p>Reveló el espionaje global de la NSA, mostrando cómo los estados usan la tecnología para vigilar ciudadanos.</p>
+            </div>
+          </article>
+
+          <article class="caso">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Cambridge_Analytica_logo.svg"
+                 onerror="this.src='https://cdn.pixabay.com/photo/2020/07/02/19/08/privacy-5365149_1280.png';"
+                 alt="Cambridge Analytica" />
+            <div>
+              <h3>Cambridge Analytica (2018)</h3>
+              <p>Utilizó datos de millones de usuarios de Facebook para manipular campañas políticas y electorales.</p>
+            </div>
+          </article>
+
+          <article class="caso">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Beijing_Skyline_2020.jpg"
+                 onerror="this.src='https://cdn.pixabay.com/photo/2021/04/06/19/42/surveillance-6155838_1280.png';"
+                 alt="Crédito Social China" />
+            <div>
+              <h3>Crédito Social en China</h3>
+              <p>Un sistema que evalúa el comportamiento ciudadano mediante IA, recompensando o sancionando conductas.</p>
+            </div>
+          </article>
         </div>
-
-        <div class="faq-item">
-          <button class="faq-question">¿Qué papel juega la inteligencia artificial?</button>
-          <div class="faq-answer">
-            <p>La IA analiza y predice comportamientos a partir de datos masivos; es clave en reconocimiento facial, análisis de redes sociales y monitoreo automatizado.</p>
-          </div>
-        </div>
-
-        <div class="faq-item">
-          <button class="faq-question">¿Se puede evitar la vigilancia?</button>
-          <div class="faq-answer">
-            <p>No completamente, pero se puede reducir usando cifrado, configurando la privacidad en redes, y exigiendo transparencia a las instituciones.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Casos Reales -->
-    <section id="casos">
-      <h2>6. Casos Reales de Vigilancia Masiva</h2>
-      <div class="casos-container">
-        <article class="caso">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Edward_Snowden-2.jpg" alt="Edward Snowden" />
-          <div>
-            <h3>Edward Snowden (2013)</h3>
-            <p>Reveló el programa global de espionaje electrónico de la NSA, exponiendo la magnitud de la vigilancia estatal en Internet.</p>
-          </div>
-        </article>
-
-        <article class="caso">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Cambridge_Analytica_logo.svg" alt="Cambridge Analytica" />
-          <div>
-            <h3>Cambridge Analytica (2018)</h3>
-            <p>Usó millones de datos de usuarios de Facebook para manipular decisiones políticas, mostrando el poder de los algoritmos en la democracia.</p>
-          </div>
-        </article>
-
-        <article class="caso">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Beijing_Skyline_2020.jpg" alt="China" />
-          <div>
-            <h3>Crédito Social en China</h3>
-            <p>Un sistema que evalúa el comportamiento de los ciudadanos mediante IA y vigilancia, premiando o sancionando según sus acciones digitales.</p>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <!-- Mini test -->
-    <section id="test">
-      <h2>7. ¿Qué tan vigilado estás?</h2>
-      <div class="quiz">
-        <p>1️⃣ ¿Usás contraseñas distintas en cada red?</p>
-        <button class="btn" data-value="1">Sí</button>
-        <button class="btn" data-value="0">No</button>
-
-        <p>2️⃣ ¿Leés los permisos antes de instalar una app?</p>
-        <button class="btn" data-value="1">Sí</button>
-        <button class="btn" data-value="0">No</button>
-
-        <p>3️⃣ ¿Usás verificación en dos pasos (2FA)?</p>
-        <button class="btn" data-value="1">Sí</button>
-        <button class="btn" data-value="0">No</button>
-
-        <div id="result"></div>
-      </div>
-    </section>
-
-    <!-- Bibliografía -->
-    <section id="refs">
-      <h2>8. Bibliografía</h2>
-      <ul>
-        <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
-        <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
-        <li>Bostrom, N. (2014). <em>Superinteligencia</em>. Debate.</li>
-      </ul>
-    </section>
+      </section>
+    </aside>
   </main>
+
+  <!-- Test -->
+  <section id="test">
+    <h2>5. ¿Qué tan vigilado estás?</h2>
+    <div class="quiz">
+      <p>1. ¿Usás contraseñas diferentes en cada red social?</p>
+      <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
+
+      <p>2. ¿Leés los permisos antes de instalar una aplicación?</p>
+      <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
+
+      <p>3. ¿Usás verificación en dos pasos (2FA)?</p>
+      <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
+
+      <p>4. ¿Usás buscadores o navegadores que prioricen tu privacidad?</p>
+      <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
+
+      <p>5. ¿Limitás la ubicación y acceso a tus fotos en el celular?</p>
+      <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
+
+      <p>6. ¿Desactivás las cookies de seguimiento cuando navegás?</p>
+      <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
+
+      <div id="result"></div>
+    </div>
+  </section>
+
+  <section id="refs">
+    <h2>6. Bibliografía</h2>
+    <ul>
+      <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
+      <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
+    </ul>
+  </section>
 
   <footer>
     <p>© 2025 - Proyecto CTS: Privacidad y Vigilancia Masiva</p>
