Update index.html with additional bibliography entry
Added a new reference to a source on mass surveillance and privacy.

--- a/index.html
+++ b/index.html
@@ -167,13 +167,22 @@
     </div>
   </section>
 
-  <section id="refs">
-    <h2>6. Bibliografía</h2>
-    <ul>
-      <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
-      <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
-    </ul>
-  </section>
+ <section id="refs">
+  <h2>6. Bibliografía</h2>
+  <ul>
+    <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
+    <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
+    <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. Universidad de Buenos Aires. 
+      <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a>
+    </li>
+    <li><em>Mass Surveillance – Computer Science Topics</em>. 
+      <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a>
+    </li>
+    <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
+      <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a>
+    </li>
+  </ul>
+</section>
 
   <footer>
     <p>© 2025 - Proyecto CTS: Privacidad y Vigilancia Masiva</p>
@@ -182,3 +191,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
