Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#contexto">Contexto</a>
       <a href="#impacto">Impacto ético</a>
       <a href="#cts">Análisis CTS</a>
+      <a href="#libros">Libros</a>
       <a href="#test">Test</a>
       <a href="#refs">Bibliografía</a>
     </nav>
@@ -141,28 +142,59 @@
     </aside>
   </main>
 
+  <!-- CARRUSEL DE LIBROS -->
+  <section id="libros">
+    <h2>Libros vinculados a la temática</h2>
+    <div class="carousel">
+      <div class="book-card">
+        <h3>🧠 Nick Bostrom – Superinteligencia</h3>
+        <p><strong>Por qué sirve:</strong> analiza los riesgos del desarrollo de la IA, incluyendo la vigilancia y pérdida de autonomía humana.</p>
+        <p><strong>Cómo usarlo:</strong> en el Contexto científico y tecnológico o Impacto ético.</p>
+        <blockquote>“Según Bostrom (2014), la inteligencia artificial avanzada puede convertirse en un sistema capaz de recolectar y analizar toda la información humana.”</blockquote>
+      </div>
+      <div class="book-card">
+        <h3>🔍 Javier Echeverría – La revolución tecnocientífica</h3>
+        <p><strong>Por qué sirve:</strong> explica cómo la tecnociencia redefine las relaciones sociales y de poder.</p>
+        <p><strong>Cómo usarlo:</strong> en Análisis desde la perspectiva CTS.</p>
+        <blockquote>“Echeverría (1999) sostiene que la tecnociencia crea nuevas formas de control y dependencia tecnológica.”</blockquote>
+      </div>
+      <div class="book-card">
+        <h3>🔍 Nicholas Carr – Atrapados</h3>
+        <p><strong>Por qué sirve:</strong> analiza cómo la hiperconectividad afecta la atención y la conducta.</p>
+        <p><strong>Cómo usarlo:</strong> en Impacto social y ético.</p>
+        <blockquote>“Carr (2011) advierte que la hiperconectividad genera una subjetividad moldeada por algoritmos.”</blockquote>
+      </div>
+      <div class="book-card">
+        <h3>🔍 Nassim Nicholas Taleb – El cisne negro</h3>
+        <p><strong>Por qué sirve:</strong> aborda la imprevisibilidad de sistemas complejos como el big data.</p>
+        <p><strong>Cómo usarlo:</strong> en Innovación del grupo.</p>
+        <blockquote>“Taleb (2007) sugiere que los sistemas basados en predicciones pueden amplificar eventos imprevistos.”</blockquote>
+      </div>
+      <div class="book-card">
+        <h3>🔍 Edward O. Wilson – El sentido de la existencia humana</h3>
+        <p><strong>Por qué sirve:</strong> integra ciencia y ética para un futuro equilibrado.</p>
+        <p><strong>Cómo usarlo:</strong> en Conclusiones.</p>
+        <blockquote>“Wilson plantea que la ciencia debe integrarse con la ética para garantizar un futuro sostenible.”</blockquote>
+      </div>
+    </div>
+  </section>
+
   <!-- Test -->
   <section id="test">
     <h2>5. ¿Qué tan vigilado estás?</h2>
     <div class="quiz">
       <p>1. ¿Usás contraseñas diferentes en cada red social?</p>
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
-
       <p>2. ¿Leés los permisos antes de instalar una aplicación?</p>
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
-
       <p>3. ¿Usás verificación en dos pasos (2FA)?</p>
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
-
       <p>4. ¿Usás buscadores o navegadores que prioricen tu privacidad?</p>
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
-
       <p>5. ¿Limitás la ubicación y acceso a tus fotos en el celular?</p>
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
-
       <p>6. ¿Desactivás las cookies de seguimiento cuando navegás?</p>
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
-
       <div id="result"></div>
     </div>
   </section>
@@ -174,14 +206,11 @@
       <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
       <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
       <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. Universidad de Buenos Aires. 
-        <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a>
-      </li>
+        <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a></li>
       <li><em>Mass Surveillance – Computer Science Topics</em>. 
-        <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a>
-      </li>
+        <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a></li>
       <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
-        <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a>
-      </li>
+        <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a></li>
     </ul>
   </section>
 
