Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -147,33 +147,33 @@
     <h2>Libros vinculados a la temática</h2>
     <div class="carousel">
       <div class="book-card">
-        <h3>🧠 Nick Bostrom – Superinteligencia</h3>
-        <p><strong>Por qué sirve:</strong> analiza los riesgos del desarrollo de la IA, incluyendo la vigilancia y pérdida de autonomía humana.</p>
-        <p><strong>Cómo usarlo:</strong> en el Contexto científico y tecnológico o Impacto ético.</p>
+        <h3> Nick Bostrom – Superinteligencia</h3>
+        <p><strong>Aporte:</strong> Analiza los riesgos del desarrollo de la IA, incluyendo la vigilancia y pérdida de autonomía humana.</p>
+        <p><strong>Relevancia:</strong> En el Contexto científico y tecnológico o Impacto ético.</p>
         <blockquote>“Según Bostrom (2014), la inteligencia artificial avanzada puede convertirse en un sistema capaz de recolectar y analizar toda la información humana.”</blockquote>
       </div>
       <div class="book-card">
-        <h3>🔍 Javier Echeverría – La revolución tecnocientífica</h3>
-        <p><strong>Por qué sirve:</strong> explica cómo la tecnociencia redefine las relaciones sociales y de poder.</p>
-        <p><strong>Cómo usarlo:</strong> en Análisis desde la perspectiva CTS.</p>
+        <h3> Javier Echeverría – La revolución tecnocientífica</h3>
+        <p><strong>Aporte:</strong> Explica cómo la tecnociencia redefine las relaciones sociales y de poder.</p>
+        <p><strong>Relevancia:</strong> Análisis desde la perspectiva CTS.</p>
         <blockquote>“Echeverría (1999) sostiene que la tecnociencia crea nuevas formas de control y dependencia tecnológica.”</blockquote>
       </div>
       <div class="book-card">
-        <h3>🔍 Nicholas Carr – Atrapados</h3>
-        <p><strong>Por qué sirve:</strong> analiza cómo la hiperconectividad afecta la atención y la conducta.</p>
-        <p><strong>Cómo usarlo:</strong> en Impacto social y ético.</p>
+        <h3> Nicholas Carr – Atrapados</h3>
+        <p><strong>Aporte:</strong> Analiza cómo la hiperconectividad afecta la atención y la conducta.</p>
+        <p><strong>Relevancia:</strong> Impacto social y ético.</p>
         <blockquote>“Carr (2011) advierte que la hiperconectividad genera una subjetividad moldeada por algoritmos.”</blockquote>
       </div>
       <div class="book-card">
         <h3>🔍 Nassim Nicholas Taleb – El cisne negro</h3>
-        <p><strong>Por qué sirve:</strong> aborda la imprevisibilidad de sistemas complejos como el big data.</p>
-        <p><strong>Cómo usarlo:</strong> en Innovación del grupo.</p>
+        <p><strong>Aporte:</strong> Aborda la imprevisibilidad de sistemas complejos como el big data.</p>
+        <p><strong>Relevancia:</strong> Innovación del grupo.</p>
         <blockquote>“Taleb (2007) sugiere que los sistemas basados en predicciones pueden amplificar eventos imprevistos.”</blockquote>
       </div>
       <div class="book-card">
         <h3>🔍 Edward O. Wilson – El sentido de la existencia humana</h3>
-        <p><strong>Por qué sirve:</strong> integra ciencia y ética para un futuro equilibrado.</p>
-        <p><strong>Cómo usarlo:</strong> en Conclusiones.</p>
+        <p><strong>Aporte:</strong> Integra ciencia y ética para un futuro equilibrado.</p>
+        <p><strong>Relevancia:</strong> Conclusiones.</p>
         <blockquote>“Wilson plantea que la ciencia debe integrarse con la ética para garantizar un futuro sostenible.”</blockquote>
       </div>
     </div>
@@ -221,3 +221,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
