Add contact section for user inquiries
Added a contact section for user inquiries and comments regarding digital surveillance.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,27 @@
         <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a></li>
     </ul>
   </section>
+  
+<!-- CONTACTO -->
+<section id="contacto">
+  <h2>7. Contacto</h2>
+  <p>Si tenés dudas, inquietudes o querés dejar un comentario sobre la vigilancia digital, podés hacerlo acá:</p>
+
+  <form class="contact-form">
+    <label>Nombre</label>
+    <input type="text" placeholder="Tu nombre..." required>
+
+    <label>Email</label>
+    <input type="email" placeholder="tuemail@gmail.com" required>
+
+    <label>Mensaje</label>
+    <textarea rows="5" placeholder="Escribí tu consulta acá..." required></textarea>
+
+    <button type="submit">Enviar mensaje</button>
+  </form>
+
+  <p id="contact-response"></p>
+</section>
 
   <footer>
     <p>© 2025 - Proyecto CTS: Privacidad y Vigilancia Masiva</p>
@@ -221,4 +242,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
