--- a/index.html
+++ b/index.html
@@ -197,7 +197,39 @@
       <button class="btn" data-value="1">Sí</button><button class="btn" data-value="0">No</button>
       <div id="result"></div>
     </div>
+
+    <div id="estadisticas">
+  <h3>📊 Resultados de la clase</h3>
+  <div class="stats-container">
+    <!-- Cada barra representa una pregunta -->
+    <div class="stat-item">
+      <p><strong>Pregunta 1</strong> — Sí 60% / No 40%</p>
+      <div class="bar yes" style="width:60%"></div>
+    </div>
+    <div class="stat-item">
+      <p><strong>Pregunta 2</strong> — Sí 14% / No 86%</p>
+      <div class="bar yes" style="width:14%"></div>
+    </div>
+    <div class="stat-item">
+      <p><strong>Pregunta 3</strong> — Sí 71% / No 29%</p>
+      <div class="bar yes" style="width:71%"></div>
+    </div>
+    <div class="stat-item">
+      <p><strong>Pregunta 4</strong> — Sí 21% / No 79%</p>
+      <div class="bar yes" style="width:21%"></div>
+    </div>
+    <div class="stat-item">
+      <p><strong>Pregunta 5</strong> — Sí 46% / No 54%</p>
+      <div class="bar yes" style="width:46%"></div>
+    </div>
+    <div class="stat-item">
+      <p><strong>Pregunta 6</strong> — Sí 7% / No 93%</p>
+      <div class="bar yes" style="width:7%"></div>
+    </div>
+  </div>
+</div>
   </section>
+  
 
   <!-- Bibliografía -->
   <section id="refs">
@@ -242,5 +274,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
