Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -243,6 +243,25 @@
         <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a></li>
       <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
         <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a></li>
+      <li>
+  📺 <em>Video recomendado:</em> 
+  <a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">
+    ¿Qué es la vigilancia masiva? — Explicación clara
+  </a>
+</li>
+
+<li>
+  <a href="https://safety.google/intl/es_ALL/safety/" target="_blank">
+    Google Safety: Herramientas de privacidad y seguridad
+  </a>
+</li>
+
+<li>
+  <a href="https://telefonicatech.com/blog/privacidad-y-seguridad-en-internet-en-que-se-diferencian-y-su-impacto-en-tu-reputacion-online"
+     target="_blank">
+    Privacidad y seguridad en internet — Telefónica Tech
+  </a>
+</li>
     </ul>
   </section>
   
@@ -274,6 +293,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
